--- a/Flight_Phase_Identification/altitude_to_flight_phase.ipynb
+++ b/Flight_Phase_Identification/altitude_to_flight_phase.ipynb
@@ -314,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "R [conda env:r_env]",
    "language": "R",
-   "name": "ir"
+   "name": "conda-env-r_env-r"
   },
   "language_info": {
    "codemirror_mode": "r",
@@ -324,7 +324,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
